# trafficLightRecognition

./: CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmake_install.cmake  main
models/: colorModel  gmmModelGreen  gmmModelRed  gmmModelYellow
output/: 1point_xyzRGBcloud_ptr.ply  out.avi  point_xyzRGBcloud_ptr.ply  road.ply
src/: defines.h  main.cpp
src/blobanalysis/: blobAnalysis.cpp  blobAnalysis.h
src/candidateEvaluator/: candidateEvaluator.cpp  candidateEvaluator.h
src/colorSegmentation/: backproject.cpp  backproject.h  emGMM.cpp  emGMM.h  spotLightDetection.cpp  spotLightDetection.h
src/colorSegmentation/colorLight/: colorLight.cpp  colorLight.h
src/detectors/: GMM.cpp  GMM.h  backproject.cpp  backproject.h  blobAnalysis.cpp  blobAnalysis.h  edgeSegmentation.cpp  edgeSegmentation.h  spotLightDetection.cpp  spotLightDetection.h  spotLightDetectionOLD.cpp  spotLightDetectionOLD.h  thresholdColor.cpp  thresholdColor.h
src/detectors/.svn/: all-wcprops  entries
src/detectors/.svn/text-base/: Meanshift.cpp.svn-base  Meanshift.hpp.svn-base
src/detectors/colorLight/: colorLight.h
src/detectors/spotLight/: spotLight.cpp  spotLight.h
src/disparity/: disparity.cpp  disparity.h
src/disparity/.svn/: all-wcprops  entries
src/evaluation/: evaluation.cpp  evaluation.h
src/kernels/: mykernel.cu  mykernel.h  mykernels.h  mykerneltest.cpp  vdispkernel.cu  vdispkernel.h
src/pointCloud/: pointCloud.cpp  pointCloud.h
src/pressentation/: pressent.cpp  pressent.h  pressentation.cpp  pressentation.h
src/pressentation/.svn/: all-wcprops  entries
src/pressentation/.svn/text-base/: Pressent.cpp.svn-base  Pressent.h.svn-base
src/ransac/: ransac.h
src/ransac/.svn/text-base/: ransac.cpp.svn-base  ransac.h.svn-base
src/shapeSegmentation/: edgeSegmentation.cpp  edgeSegmentation.h
src/stereo/disparity/: disparity.cpp  disparity.h
src/stereo/disparity/.svn/text-base/: Disparity.cpp.svn-base  Disparity.h.svn-base
src/stereo/kernels/: mykernels.cpp
src/stereo/pointCloud/: pointCloud.cpp  pointCloud.h
src/stereo/ransac/: ransac.cpp  ransac.h
src/stereo/ransac/.svn/: all-wcprops  entries
src/tracking/: kalman.cpp  kalmanfilter2d.cpp  kalmanfilter2d.h
src/trafficSignal/: trafficSignal.cpp  trafficSignal.h
src/trafficSignal/.svn/: all-wcprops  entries
